manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-demo
  labels:
    app: tomcat-demo
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: tomcat-demo
  template:
    metadata:
      labels:
        app: tomcat-demo
    spec:
      containers:
      - name: tomcat-demo
        # image: 00000000000000.dkr.ecr.my-region.amazonaws.com/example-eks:tag
        image: 558811456770.dkr.ecr.us-west-2.amazonaws.com/my-ecr-repo:380c3259dfc4a40277c3d4916f969a655c7ee080
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
