manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-demo
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
      app: tomcat-demo
